force-app/main/default/objects/TPM_QueryDefinition__mdt/TPM_QueryDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Query Definition</label>
    <pluralLabel>Query Definition</pluralLabel>
</CustomObject>