force-app/main/default/objects/TPM_QueryDefinition__mdt/fields/TPM_BatchSize__c.field-meta.xml
<CustomField>
    <fullName>TPM_BatchSize__c</fullName>
    <label>Batch Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>