force-app/main/default/objects/TPM_QueryDefinition__mdt/fields/TPM_Query_Footer__c.field-meta.xml
<CustomField>
    <fullName>TPM_Query_Footer__c</fullName>
    <description>Allows for statements AFTER the Where Clause. Example: GROUP BY field1, field2 SORT BY field1 ASC</description>
    <inlineHelpText>Example: GROUP BY field1, field2 SORT BY field1 ASC</inlineHelpText>
    <label>Query Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>