force-app/main/default/objects/TPM_QueryDefinition__mdt/fields/TPM_QueryCondition__c.field-meta.xml
<CustomField>
    <fullName>TPM_QueryCondition__c</fullName>
    <label>Query Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>