force-app/main/default/objects/TPM_QueryDefinition__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>TPM_ProcessName__c</columns>
    <columns>TPM_BaseQuery__c</columns>
    <columns>TPM_QueryCondition__c</columns>
    <columns>TPM_BatchSize__c</columns>
    <columns>TPM_Query_Footer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>